[package]
name = "lao"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib","cdylib"]
name = "functions_library"

[dependencies]
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
jsonwebtoken = "7.2.0" 
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
libc = "0.2.159"
chrono = "0.4.38"
serde_json = "1.0"
rand = "0.8"
cc = "1.1.24" # Check if there's a newer version     # Update to a compatible version


[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"


